Fix datepicker visible initally

--- a/dienstplan/css/style.css
+++ b/dienstplan/css/style.css
@@ -102,6 +102,8 @@ table {
 
 .ui-datepicker 
 {
+    display: none;
+    
     background-color: white;
     border: 2px solid #dedede;
     padding: 15px 15px 15px 15px;
